Clean up metadata tracker unit tests