@@ -21,12 +21,14 @@
 
 package io.crate.replication.logical;
 
-import io.crate.metadata.RelationName;
-import io.crate.replication.logical.metadata.ConnectionInfo;
-import io.crate.replication.logical.metadata.Publication;
-import io.crate.replication.logical.metadata.PublicationsMetadata;
-import io.crate.replication.logical.metadata.Subscription;
-import io.crate.replication.logical.metadata.SubscriptionsMetadata;
+import static org.elasticsearch.cluster.metadata.IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING;
+import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_INDEX_UUID;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
+
+import java.util.List;
+import java.util.Map;
+
 import org.elasticsearch.Version;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
@@ -38,42 +40,56 @@ import org.elasticsearch.common.settings.IndexScopedSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.test.ESTestCase;
+import org.junit.Before;
 import org.junit.Test;
 
-import java.io.IOException;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-
-import static org.elasticsearch.cluster.metadata.IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING;
-import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_INDEX_UUID;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.not;
+import io.crate.metadata.RelationName;
+import io.crate.replication.logical.metadata.ConnectionInfo;
+import io.crate.replication.logical.metadata.Publication;
+import io.crate.replication.logical.metadata.PublicationsMetadata;
+import io.crate.replication.logical.metadata.Subscription;
+import io.crate.replication.logical.metadata.SubscriptionsMetadata;
 
 public class MetadataTrackerTest extends ESTestCase {
 
-    IndexMetadata buildIndexMetadata() throws IOException {
-        var mappingMetadata = new MappingMetadata("test", Map.of("1", "one"));
-        return IndexMetadata.builder("test").putMapping(mappingMetadata)
+    private IndexMetadata INDEX_METADATA;
+    private ClusterState PUBLISHER_CLUSTER_STATE;
+    private ClusterState SUBSCRIBER_CLUSTER_STATE;
+
+    private ClusterState updateClusterState(ClusterState clusterState, IndexMetadata indexMetadata) {
+        return ClusterState.builder(clusterState)
+            .metadata(Metadata.builder(clusterState.metadata())
+                          .put(indexMetadata, true))
+            .incrementVersion()
+            .build();
+    }
+
+    @Before
+    public void setUpStates() throws Exception {
+        INDEX_METADATA = IndexMetadata.builder("test")
+            .putMapping(new MappingMetadata("test", Map.of("1", "one")))
             .settings(settings(Version.CURRENT))
-            .version(1)
             .numberOfShards(1)
             .numberOfReplicas(0)
             .build();
-    }
 
-    ClusterState buildPublisherClusterState(IndexMetadata indexMetadata) {
-        PublicationsMetadata publicationsMetadata = new PublicationsMetadata(
-            Map.of("pub1", new Publication("user", false, List.of(new RelationName("doc", "test"))))
+        var publicationsMetadata = new PublicationsMetadata(
+            Map.of("pub1",
+                   new Publication(
+                       "user",
+                       false,
+                       List.of(new RelationName("doc", "test"))
+                   )
+            )
         );
-
-        return ClusterState.builder(new ClusterName("publisher"))
+        PUBLISHER_CLUSTER_STATE = ClusterState.builder(new ClusterName("publisher"))
             .version(1L)
-            .metadata(Metadata.builder().put(indexMetadata, true).putCustom(PublicationsMetadata.TYPE, publicationsMetadata).build())
+            .metadata(Metadata.builder()
+                          .put(INDEX_METADATA, true)
+                          .putCustom(PublicationsMetadata.TYPE, publicationsMetadata)
+                          .build())
             .build();
-    }
 
-    ClusterState buildSubscriberClusterState(IndexMetadata indexMetadata) {
         var subscriptionsMetadata = new SubscriptionsMetadata(
             Map.of("sub1",
                    new Subscription(
@@ -81,73 +97,69 @@ public class MetadataTrackerTest extends ESTestCase {
                        ConnectionInfo.fromURL("crate://example.com:4310?user=valid_user&password=123"),
                        List.of("pub1"),
                        Settings.EMPTY,
-                       Collections.emptyMap()
+                       Map.of(RelationName.fromIndexName("test"),
+                              new Subscription.RelationState(Subscription.State.MONITORING, null))
                    )
             )
         );
-
-        return ClusterState.builder(new ClusterName("subscriber"))
+        SUBSCRIBER_CLUSTER_STATE = ClusterState.builder(new ClusterName("subscriber"))
             .version(1L)
-            .metadata(Metadata.builder().put(indexMetadata, true).putCustom(SubscriptionsMetadata.TYPE, subscriptionsMetadata).build())
+            .metadata(Metadata.builder()
+                          .put(INDEX_METADATA, true)
+                          .putCustom(SubscriptionsMetadata.TYPE, subscriptionsMetadata)
+                          .build())
             .build();
     }
 
     @Test
     public void test_mappings_is_transferred_between_two_clustering_for_logical_replication() throws Exception {
-        var publisherMetadata = buildIndexMetadata();
-        var publisherClusterState = buildPublisherClusterState(publisherMetadata);
-        var subscriberMetadata = buildIndexMetadata();
-        var subscriberClusterState = buildSubscriberClusterState(subscriberMetadata);
-
-        var syncedSubriberClusterState = MetadataTracker.updateIndexMetadata("sub1",
-                                                                             subscriberClusterState,
-                                                                             publisherClusterState,
-                                                                             IndexScopedSettings.DEFAULT_SCOPED_SETTINGS);
-        // Nothing in the indexMetadata changed, so the clusterstate must be equal
-        assertThat(subscriberClusterState, is(syncedSubriberClusterState));
-
+        var syncedSubscriberClusterState = MetadataTracker.updateIndexMetadata(
+            "sub1",
+            SUBSCRIBER_CLUSTER_STATE,
+            PUBLISHER_CLUSTER_STATE,
+            IndexScopedSettings.DEFAULT_SCOPED_SETTINGS);
+        // Nothing in the indexMetadata changed, so the cluster state must be equal
+        assertThat(SUBSCRIBER_CLUSTER_STATE, is(syncedSubscriberClusterState));
 
         // Let's change the mapping on the publisher publisherClusterState
         var updatedMappingMetadata = new MappingMetadata("test", Map.of("1", "one", "2", "two"));
-        var updatedPublisherMetadata = IndexMetadata.builder(buildIndexMetadata()).putMapping(updatedMappingMetadata).mappingVersion(
-            2L).build();
-        var updatedPublisherClusterState = buildPublisherClusterState(updatedPublisherMetadata);
+        var updatedPublisherMetadata = IndexMetadata.builder(INDEX_METADATA)
+            .putMapping(updatedMappingMetadata)
+            .mappingVersion(2L)
+            .build();
+        var updatedPublisherClusterState = updateClusterState(PUBLISHER_CLUSTER_STATE, updatedPublisherMetadata);
 
-        syncedSubriberClusterState = MetadataTracker.updateIndexMetadata(
+        syncedSubscriberClusterState = MetadataTracker.updateIndexMetadata(
             "sub1",
-            subscriberClusterState,
+            SUBSCRIBER_CLUSTER_STATE,
             updatedPublisherClusterState,
             IndexScopedSettings.DEFAULT_SCOPED_SETTINGS
         );
 
-        assertThat(subscriberClusterState, is(not(syncedSubriberClusterState)));
-        var syncedIndexMetadata = syncedSubriberClusterState.metadata().index("test");
+        assertThat(SUBSCRIBER_CLUSTER_STATE, is(not(syncedSubscriberClusterState)));
+        var syncedIndexMetadata = syncedSubscriberClusterState.metadata().index("test");
         assertThat(syncedIndexMetadata.mapping(), is(updatedPublisherMetadata.mapping()));
         assertThat(updatedPublisherMetadata.mapping(), is(updatedMappingMetadata));
-
     }
 
     @Test
     public void test_dynamic_setting_is_transferred_between_two_clustering_for_logical_replication() throws Exception {
-        var publisherMetadata = buildIndexMetadata();
-        var subscriberMetadata = buildIndexMetadata();
-        var subscriberClusterState = buildSubscriberClusterState(subscriberMetadata);
-
         var settingsBuilder = settings(Version.CURRENT).put(IndexSettings.MAX_NGRAM_DIFF_SETTING.getKey(), 5);
-        var updatedPublisherMetadata = IndexMetadata.builder(publisherMetadata).settings(settingsBuilder)
+        var updatedPublisherMetadata = IndexMetadata.builder(INDEX_METADATA)
+            .settings(settingsBuilder)
             .numberOfShards(1)
             .numberOfReplicas(0).
             version(1)
             .build();
 
-        var updatedPublisherClusterState = buildPublisherClusterState(updatedPublisherMetadata);
-        var syncedSubriberClusterState = MetadataTracker.updateIndexMetadata(
+        var updatedPublisherClusterState = updateClusterState(PUBLISHER_CLUSTER_STATE, updatedPublisherMetadata);
+        var syncedSubscriberClusterState = MetadataTracker.updateIndexMetadata(
             "sub1",
-            subscriberClusterState,
+            SUBSCRIBER_CLUSTER_STATE,
             updatedPublisherClusterState,
             IndexScopedSettings.DEFAULT_SCOPED_SETTINGS
         );
-        var syncedIndexMetadata = syncedSubriberClusterState.metadata().index("test");
+        var syncedIndexMetadata = syncedSubscriberClusterState.metadata().index("test");
         assertThat(syncedIndexMetadata.getSettings(), is(updatedPublisherMetadata.getSettings()));
         assertThat(syncedIndexMetadata.getSettings().getAsInt(IndexSettings.MAX_NGRAM_DIFF_SETTING.getKey(), null),
                    is(5));
@@ -155,51 +167,44 @@ public class MetadataTrackerTest extends ESTestCase {
 
     @Test
     public void test_private_setting_is_not_transferred_between_two_clustering_for_logical_replication() throws Exception {
-        var publisherMetadata = buildIndexMetadata();
-        var subscriberMetadata = buildIndexMetadata();
-        var subscriberClusterState = buildSubscriberClusterState(subscriberMetadata);
-
         var publisherIndexUuid = UUIDs.randomBase64UUID();
         var settingsBuilder = settings(Version.CURRENT).put(SETTING_INDEX_UUID, publisherIndexUuid);
-        var updatedPublisherMetadata = IndexMetadata.builder(publisherMetadata).settings(settingsBuilder)
+        var updatedPublisherMetadata = IndexMetadata.builder(INDEX_METADATA)
+            .settings(settingsBuilder)
             .numberOfShards(1)
             .numberOfReplicas(0)
             .version(1)
             .build();
-        var updatedPublisherClusterState = buildPublisherClusterState(updatedPublisherMetadata);
-        var syncedSubriberClusterState = MetadataTracker.updateIndexMetadata(
+        var updatedPublisherClusterState = updateClusterState(PUBLISHER_CLUSTER_STATE, updatedPublisherMetadata);
+        var syncedSubscriberClusterState = MetadataTracker.updateIndexMetadata(
             "sub1",
-            subscriberClusterState,
+            SUBSCRIBER_CLUSTER_STATE,
             updatedPublisherClusterState,
             IndexScopedSettings.DEFAULT_SCOPED_SETTINGS
         );
-        var syncedIndexMetadata = syncedSubriberClusterState.metadata().index("test");
+        var syncedIndexMetadata = syncedSubscriberClusterState.metadata().index("test");
         assertThat(syncedIndexMetadata.getSettings(), is(not(updatedPublisherMetadata.getSettings())));
         assertThat(syncedIndexMetadata.getSettings().get(SETTING_INDEX_UUID, "default"), is(not(publisherIndexUuid)));
     }
 
     @Test
     public void test_non_replicatable_setting_is_not_transferred_between_two_clustering_for_logical_replication() throws Exception {
-        var publisherMetadata = buildIndexMetadata();
-        var subscriberMetadata = buildIndexMetadata();
-        var subscriberClusterState = buildSubscriberClusterState(subscriberMetadata);
-
         var settingsBuilder = settings(Version.CURRENT).put(INDEX_NUMBER_OF_REPLICAS_SETTING.getKey(), 5);
-        var updatedPublisherMetadata = IndexMetadata.builder(publisherMetadata).settings(settingsBuilder)
+        var updatedPublisherMetadata = IndexMetadata.builder(INDEX_METADATA)
+            .settings(settingsBuilder)
             .numberOfShards(1)
             .version(1)
             .build();
 
-        var updatedPublisherClusterState = buildPublisherClusterState(updatedPublisherMetadata);
-        var syncedSubriberClusterState = MetadataTracker.updateIndexMetadata(
+        var updatedPublisherClusterState = updateClusterState(PUBLISHER_CLUSTER_STATE, updatedPublisherMetadata);
+        var syncedSubscriberClusterState = MetadataTracker.updateIndexMetadata(
             "sub1",
-            subscriberClusterState,
+            SUBSCRIBER_CLUSTER_STATE,
             updatedPublisherClusterState,
             IndexScopedSettings.DEFAULT_SCOPED_SETTINGS
         );
-        var syncedIndexMetadata = syncedSubriberClusterState.metadata().index("test");
+        var syncedIndexMetadata = syncedSubscriberClusterState.metadata().index("test");
         assertThat(syncedIndexMetadata.getSettings(), is(not(updatedPublisherMetadata.getSettings())));
         assertThat(INDEX_NUMBER_OF_REPLICAS_SETTING.get(syncedIndexMetadata.getSettings()), is(0));
     }
-
 }
